# XCalib

./: .gitattributes  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml  release.yml
demo/: .gitignore  README.md  demo_common.py  demo_config.py  intrinsics_a9_example.json  pixi.toml  run_00_prepare_assets.py  run_01_match_one_frame.py  run_02_calibrate_stream.py  run_03_full_demo.py  xcalib_quickstart.ipynb
demo/frames/: .gitignore
demo/frames/a9_sample/: manifest.json
demo/frames/a9_sample/frame_0000/: detections.json  point_cloud.pcd
demo/frames/a9_sample/frame_0001/: detections.json  point_cloud.pcd
demo/frames/a9_sample/frame_0002/: detections.json  point_cloud.pcd
demo/frames/a9_sample/frame_0003/: detections.json  point_cloud.pcd
demo/frames/a9_sample/frame_0004/: detections.json  point_cloud.pcd
demo/frames/a9_sample/frame_0005/: detections.json  point_cloud.pcd
demo/frames/a9_sample/frame_0006/: detections.json  point_cloud.pcd
demo/frames/a9_sample/frame_0007/: detections.json  point_cloud.pcd
demo/frames/a9_sample/frame_0008/: detections.json  point_cloud.pcd
demo/frames/a9_sample/frame_0009/: detections.json  point_cloud.pcd
demo/frames/a9_sample/frame_0010/: detections.json  point_cloud.pcd
demo/frames/a9_sample/frame_0011/: detections.json  point_cloud.pcd
demo/frames/a9_sample/frame_0012/: detections.json  point_cloud.pcd
demo/frames/a9_sample/frame_0013/: detections.json  point_cloud.pcd
demo/frames/a9_sample/frame_0014/: detections.json  point_cloud.pcd
demo/frames/a9_sample/frame_0015/: detections.json  point_cloud.pcd
demo/wheels/: xcalib-0.1.0-py3-none-any.whl
docs/: adding-models.md  api.md  hdf5-format.md  hub.md  index.md  paper.md  protocol.md  quick-start.md  visualization.md
docs/evidence/: desktop_rtx5090_supp_speed_table.json  index.md  standalone_onnx_validation_utc3.json  standalone_onnx_validation_utc4.json  standalone_paper_validation_a9_dataset_r02_s01.json  standalone_paper_validation_utc3.json  standalone_paper_validation_utc4.json  thor_trt_latency.json  thor_trt_latency_utc3.json
scripts/: check_public_docs.py  infer_demo.py  make_demo_media.py  oneshot_demo.py  setup_thor.sh  test_inference_all.py
scripts/paper/: bench_trt.py  benchmark_thor.py  build_trt.py  export_onnx.py  train_hdf5.py  validate_onnx.py  validate_paper.py
src/xcalib/: __init__.py  cli.py  protocol.py  visualization.py
src/xcalib/cfg/: calibrefine_a9_dataset_r02_s01.yaml  calibrefine_utc3.yaml  calibrefine_utc4.yaml  crlite_2dpe_a9_dataset_r02_s01.yaml  crlite_2dpe_utc3.yaml  crlite_2dpe_utc4.yaml  crlite_a9_dataset_r02_s01.yaml  crlite_utc3.yaml  crlite_utc4.yaml  crlite_vit_exp1_a9_dataset_r02_s01.yaml  crlite_vit_exp1_utc3.yaml  crlite_vit_exp1_utc4.yaml  crlite_vit_exp3_a9_dataset_r02_s01.yaml  crlite_vit_exp3_utc3.yaml  crlite_vit_exp3_utc4.yaml  crlite_vit_exp4_utc3.yaml  crlite_vit_exp4_utc4.yaml
src/xcalib/data/: __init__.py  crops.py  hdf5_loader.py
src/xcalib/engine/: __init__.py  exporter.py  matcher.py  trainer.py  trt.py  wrappers.py
src/xcalib/hub/: __init__.py  datasets.py  weights.py
src/xcalib/models/: __init__.py  _base.py  calibrefine.py  crlite.py  crlite_2dpe.py  crlite_vit_exp1.py  crlite_vit_exp3.py  crlite_vit_exp4.py  gnn.py  position_encoding.py  registry.py
src/xcalib/models/backbones/: __init__.py  _pointnet2_ops.py  pointnet.py  pointnet2.py  resnet_bottleneck.py  resnet_deep.py  vit_crop.py
src/xcalib/oneshot/: __init__.py  adapter.py  calibration.py  memory.py  pseudo_labels.py  session.py
src/xcalib/utils/: __init__.py  config.py  io.py  metrics.py  torch_check.py
tests/: conftest.py
tests/integration/: test_build_api.py  test_oneshot.py  test_trainer.py
tests/smoke/: test_smoke.py
tests/unit/: test_hdf5_loader.py  test_hub.py  test_hub_datasets.py  test_protocol.py  test_visualization.py
